# QSerialPortAudio

./: CMakeLists.txt  README.md
.github/workflows/: hosted-ninja-vcpkg_submod.yml
